# face-blur-detection

./: Cargo.toml
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/upload/: DownloadResult.jsx  RealtimeDetection.jsx
src/: main.rs
