[package]
name = "face-blur-detection"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
opencv = { version = "0.92", features = ["clang-runtime"] }
ndarray = "0.15"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
